Pagination: Fix non-aligned pagination

--- a/app/assets/stylesheets/sephora_style_guide/app/pagination.scss
+++ b/app/assets/stylesheets/sephora_style_guide/app/pagination.scss
@@ -4,12 +4,12 @@
     width: 50%;
     min-width: 360px;
   }
-  
+
   .pagination {
     display: inline-block;
     text-align: center;
     line-height: 20px !important;
-    
+
     .page {
       background: $white;
       border: 1px solid $grey;
@@ -23,11 +23,12 @@
       min-width: 40px;
       width: auto;
       box-sizing: border-box;
-      
+      vertical-align: middle;
+
       &:last-child {
         border-right: 1px solid $grey;
       }
-      
+
       a,
       em {
         display: inline-block;
@@ -37,37 +38,34 @@
         font-style: normal;
         box-sizing: initial;
       }
-      
+
       &:hover {
         background: $grey;
       }
-      
+
       &.current {
         background: $grey-light;
       }
-      
+
       &.continue {
         border: 0;
         border-left: 1px solid $grey;
-        
+
         @include hover {
           background: $white;
         }
       }
-      
+
       @include hover {
         background: $grey;
       }
-      
+
       &.next,
       &.prev {
-        position: relative;
-        top: -2px;
-
         a {
           width: 15px;
           height: 15px;
-          
+
           svg {
             width: 15px;
             height: 15px;
